<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/temperatureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_button"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/temperatureType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/celsiusButton">

            <RadioButton
                android:id="@+id/celsiusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius"
                android:layout_margin="8dp"/>
            <RadioButton
                android:id="@+id/fahrenheitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"
                android:layout_margin="8dp"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/convertDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_display"
                android:layout_weight="1"
                android:textAlignment="center"/>
            <EditText
                android:id="@+id/temperatureInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:inputType="numberDecimal"
                android:autofillHints=""
                android:hint="@string/default_temperature_input"
                android:imeOptions="actionDone"/>
            <TextView
                android:id="@+id/temperatureSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius_symbol"
                android:layout_weight="1"
                android:textAlignment="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/temperatureResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_result"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>